# competitive-programming

./: .gitignore  LICENSE  README.md
python/: .gitignore  pyproject.toml
python/leetcode/: __main__.py  _resolve.py  _scaffold.py
python/leetcode/problems/: 0025_reverse_nodes_in_k_group.py  3643_flip_square_submatrix_vertically.py
rust/: Cargo.toml
rust/data_structures/: find_union.rs
rust/leetcode/: Cargo.toml  build.rs
rust/leetcode/src/: lib.rs
rust/leetcode/src/problems/: mod.rs  p0007_reverse_integer.rs  p0233_number_of_digit_one.rs  p0657_robot_return_to_origin.rs  p1886_determine_whether_matrix_can_be_obtained_by_rotation.rs  p3643_flip_square_submatrix_vertically.rs  p3761_minimum_absolute_distance_between_mirror_pairs.rs
rust/potyczki/: Cargo.toml  run_tests.py
rust/potyczki/src/2026/: bur_c.rs  dod_c.rs  dos_c.rs  kam_b.rs  kon_b.rs  nas_c.rs  pal_c.rs  sto_b.rs  zmi_c.rs
