[project]
name = "competitive-programming-python"
version = "0.1.0"
description = "LeetCode and competitive programming solutions"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["leetcode"]

[tool.pytest.ini_options]
testpaths = ["leetcode/problems"]
python_files = ["[0-9][0-9][0-9][0-9]_*.py"]
addopts = ["-q"]

[tool.pylint.messages_control]
disable = ["missing-function-docstring", "missing-class-docstring", "invalid-name"]

